--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "concurrently": "^9.0.0"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "swiper": "^12.0.3",
+    "tailwindcss": "^4.1.17"
   }
 }
